.provarCaches/00D410000011HE0EAM/objects/rstk__sydatat__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_sydatat</customHelpPage>
    <description>sydatat__c</description>
    <fields>
        <fullName>rstk__formula_seqno__c</fullName>
        <formula>VALUE( rstk__sydata_recordid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Seq No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_acctgdateovr__c</fullName>
        <inlineHelpText>Used to override Accounting Date on Inventory Cost Transaction generated from the processing of this record</inlineHelpText>
        <label>Accounting Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_backgroundprocessing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Background Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchresubmitcount__c</fullName>
        <label>HVPE - Batch Resubmit Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchsizeoverride__c</fullName>
        <label>Batch Size Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_batchsizeunits__c</fullName>
        <inlineHelpText>For Internal Code Use Only.</inlineHelpText>
        <label>Batch Size Units</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_concurrencykeys__c</fullName>
        <label>Concurrency Keys</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_contato__c</fullName>
        <externalId>true</externalId>
        <label>Container Transaction ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_debugtrace__c</fullName>
        <label>HVPE - Debug Trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_docno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_errorstack__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_extmessage__c</fullName>
        <label>Extended Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fifoind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Is Fifo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromavailind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Available for Picking Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromiclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Inventory Item Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromloccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromloctype__c</fullName>
        <label>From Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromlotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_fromsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_frpjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Project Charge Code</description>
        <inlineHelpText>From Project Charge Code</inlineHelpText>
        <label>From Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>sydatats (From Project Charge Code)</relationshipLabel>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_iccontainer__c</fullName>
        <externalId>true</externalId>
        <label>Inventory Container ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_icitemsrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory By Serial Number</label>
        <referenceTo>rstk__icitemsrl__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_iclicplate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>License Plate ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_ictransreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Planned Transfer Request</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_islot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Is Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_issrl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Is Serial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_itemno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Itemno</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_message__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_nextseqsydataidtoexec__c</fullName>
        <label>Sequential Execution - Next Sydata ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_pepublished__c</fullName>
        <label>HVPE - 1:PE Published time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_petriggered__c</fullName>
        <label>HVPE - 2:PE Triggered time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_postedtoasyncproc__c</fullName>
        <label>HVPE - 3:Async proc post time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_priorseqsydataidtoexec__c</fullName>
        <label>Sequential Execution - Prior Sydata ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_process__c</fullName>
        <label>Processing Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Validation Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Failure</fullName>
                </value>
                <value>
                    <fullName>Batch Processing Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_processid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process ID</label>
        <referenceTo>rstk__processlog__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_recordid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unique Record Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_resubmitsyncsydatatohvpe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The flag indicates that the sydata originally submitted in sync mode has been resubmitted to be processed async via HVPE</inlineHelpText>
        <label>Resubmit Sync Sydata to HVPE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_seqexecbatchno__c</fullName>
        <label>Sequential Execution - Batch No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_sourcepgm__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Program</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_srlnos__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>sydivsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Created By User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>sydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_threadno__c</fullName>
        <label>HVPE - Thread No</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toavailind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Available for Picking Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_todiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>todivsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>toicitemsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toiclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Inventory Item Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipName>tosydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toloccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tolocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>tolocidsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tolocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toloctype__c</fullName>
        <label>To Loc Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_topjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Project Charge Code</description>
        <inlineHelpText>To Project Charge Code</inlineHelpText>
        <label>To Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>sydatats (To Project Charge Code)</relationshipLabel>
        <relationshipName>topjprojwbssydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_toproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>toprojsydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_tosite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>To Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>tositesydatats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txncomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txndate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txndetails__c</fullName>
        <label>Txn Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnexecended__c</fullName>
        <label>HVPE - 5:Txn exec ended time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnexecstarted__c</fullName>
        <label>HVPE - 4:Txn exec started time (GMT)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnid__c</fullName>
        <label>Transaction Id</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INVDIVDIV</fullName>
                </value>
                <value>
                    <fullName>INVSITESITE</fullName>
                </value>
                <value>
                    <fullName>INVPROJPROJ</fullName>
                </value>
                <value>
                    <fullName>INVLOCLOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydata_txnqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydata_txntype__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Transfer</fullName>
                </value>
                <value>
                    <fullName>Item Change of Serial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SYDATA Transfer Object</label>
    <listViews>
        <fullName>SYDATAT_Details_PK</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>rstk__sydata_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_tolocid__c</columns>
        <columns>rstk__sydata_tolocnum__c</columns>
        <columns>rstk__sydata_toloctype__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SYDATAT Details_PK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__R_sydatat_details</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txntype__c</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_message__c</columns>
        <columns>rstk__sydata_errorstack__c</columns>
        <columns>rstk__sydata_iccontainer__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__sydata_txnid__c</field>
            <operation>contains</operation>
            <value>DIVDIV</value>
        </filters>
        <filters>
            <field>rstk__sydata_syusr__c</field>
            <operation>contains</operation>
            <value>mayur</value>
        </filters>
        <label>MS sydatat details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Sydatat_details</fullName>
        <columns>NAME</columns>
        <columns>rstk__sydata_process__c</columns>
        <columns>rstk__sydata_backgroundprocessing__c</columns>
        <columns>rstk__sydata_txnid__c</columns>
        <columns>rstk__sydata_message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_tolocid__c</columns>
        <columns>rstk__sydata_tolocnum__c</columns>
        <columns>rstk__sydata_toloctype__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>SYDATAT Details</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__sydata_details</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__sydata_txndate__c</columns>
        <columns>rstk__sydata_message__c</columns>
        <columns>rstk__sydata_fromdiv__c</columns>
        <columns>rstk__sydata_fromlocid__c</columns>
        <columns>rstk__sydata_fromlocnum__c</columns>
        <columns>rstk__sydata_fromloctype__c</columns>
        <columns>rstk__sydata_fromproj__c</columns>
        <columns>rstk__sydata_fromsite__c</columns>
        <columns>rstk__sydata_islot__c</columns>
        <columns>rstk__sydata_issrl__c</columns>
        <columns>rstk__sydata_icitem__c</columns>
        <columns>rstk__sydata_ictransreq__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>sydata details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sydatats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>